--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mohammad Nikbakht | Portfolio</title>
+    <title>Mohammad Nikbakht | Resume</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
